--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 63,
    "metadata": {
     "tags": []
    },
@@ -11,95 +11,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Earth Engine already initialized!\n",
+      "✅ Earth Engine initialized with high-volume endpoint!\n",
       "🛰️ Welcome to AlphaEarth Land Cover Classifier!\n",
-      "🚀 Loading app...\n",
-      "🛰️ Welcome to AlphaEarth Land Cover Classifier on Binder!\n",
-      "📋 Click 'Run All' to start the complete app\n",
-      "⚠️ Earth Engine may have limited access in Binder\n",
-      "💡 For full features, use Google Colab instead\n",
-      "🚀 Loading app...\n",
-      "✅ Earth Engine authenticated!\n"
+      "🚀 Loading app...\n"
      ]
     }
    ],
    "source": [
-    "import ee\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import folium\n",
-    "import math\n",
-    "import os\n",
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score, classification_report, confusion_matrix\n",
-    "from IPython.display import display, clear_output, HTML\n",
-    "import ipywidgets as widgets\n",
-    "\n",
-    "# Install and import ipyleaflet for interactive map\n",
-    "try:\n",
-    "    import ipyleaflet\n",
-    "except ImportError:\n",
-    "    import sys, subprocess\n",
-    "    subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--quiet\", \"ipyleaflet\"])\n",
-    "    import ipyleaflet\n",
-    "\n",
-    "from ipyleaflet import Map, DrawControl, basemaps, WidgetControl\n",
-    "\n",
-    "# ===============================================\n",
-    "# 🌍 EARTH ENGINE INITIALIZATION WITH GLOBAL FLAG\n",
-    "# ===============================================\n",
-    "EE_INITIALIZED = False\n",
-    "\n",
-    "def initialize_earth_engine():\n",
-    "    global EE_INITIALIZED\n",
-    "    try:\n",
-    "        ee.Initialize()\n",
-    "        print(\"✅ Earth Engine already initialized!\")\n",
-    "        EE_INITIALIZED = True\n",
-    "        return True\n",
-    "    except:\n",
-    "        try:\n",
-    "            ee.Initialize(project=\"animated-rhythm-449415-u3\")\n",
-    "            print(\"✅ Earth Engine initialized with project!\")\n",
-    "            EE_INITIALIZED = True\n",
-    "            return True\n",
-    "        except:\n",
-    "            print(\"⚠️ Running in demo mode - Earth Engine features limited\")\n",
-    "            print(\"💡 This is a demo version. Full features need authentication.\")\n",
-    "            EE_INITIALIZED = False\n",
-    "            return False\n",
-    "\n",
-    "# Initialize Earth Engine\n",
-    "initialize_earth_engine()\n",
-    "\n",
-    "print(\"🛰️ Welcome to AlphaEarth Land Cover Classifier!\")\n",
-    "print(\"🚀 Loading app...\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# ===============================================\n",
-    "# 📋 BINDER WELCOME MESSAGE\n",
-    "# ===============================================\n",
-    "print(\"🛰️ Welcome to AlphaEarth Land Cover Classifier on Binder!\")\n",
-    "print(\"📋 Click 'Run All' to start the complete app\")\n",
-    "print(\"⚠️ Earth Engine may have limited access in Binder\")\n",
-    "print(\"💡 For full features, use Google Colab instead\")\n",
-    "print(\"🚀 Loading app...\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# ===============================================\n",
-    "# 🛰️ Google AlphaEarth Land Cover Classifier App\n",
-    "# Interactive map region selection version\n",
-    "# ===============================================\n",
-    "\n",
     "import ee\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -143,26 +61,46 @@
     "    return lgb\n",
     "\n",
     "# ===============================================\n",
-    "# 🔐 EARTH ENGINE AUTHENTICATION & INITIALIZATION - BINDER VERSION\n",
+    "# 📋 PROJECT CONFIGURATION\n",
     "# ===============================================\n",
+    "PROJECT_ID = \"animated-rhythm-449415-u3\"\n",
     "\n",
-    "PROJECT_ID = \"animated-rhythm-449415-u3\"  # 👈 CHANGE THIS TO YOUR PROJECT ID\n",
+    "# ===============================================\n",
+    "# 🌍 EARTH ENGINE INITIALIZATION\n",
+    "# ===============================================\n",
+    "EE_INITIALIZED = False\n",
     "\n",
-    "try:\n",
-    "    ee.Initialize(project=PROJECT_ID)\n",
-    "    print(\"✅ Earth Engine authenticated!\")\n",
-    "except:\n",
+    "def initialize_earth_engine():\n",
+    "    global EE_INITIALIZED\n",
+    "    \n",
     "    try:\n",
-    "        ee.Initialize()\n",
-    "        print(\"✅ Earth Engine working!\")\n",
+    "        # Force high-volume endpoint initialization\n",
+    "        ee.Initialize(\n",
+    "            opt_url='https://earthengine-highvolume.googleapis.com',\n",
+    "            project=PROJECT_ID\n",
+    "        )\n",
+    "        print(\"✅ Earth Engine initialized with high-volume endpoint!\")\n",
+    "        EE_INITIALIZED = True\n",
+    "        return True\n",
     "    except:\n",
-    "        print(\"⚠️ Earth Engine limited - some features may not work\")\n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "        try:\n",
+    "            # Fallback: try without project\n",
+    "            ee.Initialize(opt_url='https://earthengine-highvolume.googleapis.com')\n",
+    "            print(\"✅ Earth Engine initialized (no project)!\")\n",
+    "            EE_INITIALIZED = True\n",
+    "            return True\n",
+    "        except Exception as e:\n",
+    "            print(f\"❌ Earth Engine failed: {str(e)}\")\n",
+    "            print(\"🔧 This might work if you run it locally or in Colab\")\n",
+    "            EE_INITIALIZED = False\n",
+    "            return False\n",
+    "\n",
+    "# Initialize Earth Engine\n",
+    "initialize_earth_engine()\n",
+    "\n",
+    "print(\"🛰️ Welcome to AlphaEarth Land Cover Classifier!\")\n",
+    "print(\"🚀 Loading app...\")\n",
+    "\n",
     "# ===============================================\n",
     "# ORIGINAL WORKING FUNCTIONS (from your working code)\n",
     "# ===============================================\n",
@@ -710,28 +648,28 @@
     "                \"\"\"\n",
     "                return\n",
     "            \n",
-    "            # CHECK EARTH ENGINE AVAILABILITY  \n",
-    "        if not EE_INITIALIZED:\n",
-    "            self.status.value = \"\"\"\n",
-    "            <div style='background: #fef3c7; padding: 12px; border-radius: 8px; margin: 10px 0;\n",
-    "                        border-left: 4px solid #f59e0b; text-align: center;'>\n",
-    "                <span style='color: #92400e; font-weight: bold; font-size: 16px;'>\n",
-    "                    🌍 Demo Mode Active - Earth Engine Not Available\n",
-    "                </span><br>\n",
-    "                <span style='color: #92400e; font-size: 14px;'>\n",
-    "                    For full functionality, please use the Jupyter version or authenticate Earth Engine\n",
-    "                </span>\n",
-    "            </div>\n",
-    "            \"\"\"\n",
-    "            \n",
-    "            # Show demo message\n",
-    "            print(\"🎭 This is a demonstration version of AlphaEarth Land Cover Classifier\")\n",
-    "            print(\"🔒 Earth Engine authentication required for satellite data analysis\")\n",
-    "            print(\"💡 To use full features:\")\n",
-    "            print(\"   1. Use the Jupyter version\")  \n",
-    "            print(\"   2. Or run locally with Earth Engine authentication\")\n",
-    "            print(\"🌟 Thank you for trying AlphaEarth!\")\n",
-    "            return\n",
+    "            # CHECK EARTH ENGINE AVAILABILITY (PROPERLY INDENTED!)  \n",
+    "            if not EE_INITIALIZED:\n",
+    "                self.status.value = \"\"\"\n",
+    "                <div style='background: #fef3c7; padding: 12px; border-radius: 8px; margin: 10px 0;\n",
+    "                            border-left: 4px solid #f59e0b; text-align: center;'>\n",
+    "                    <span style='color: #92400e; font-weight: bold; font-size: 16px;'>\n",
+    "                        🌍 Demo Mode Active - Earth Engine Not Available\n",
+    "                    </span><br>\n",
+    "                    <span style='color: #92400e; font-size: 14px;'>\n",
+    "                        For full functionality, please use the Jupyter version or authenticate Earth Engine\n",
+    "                    </span>\n",
+    "                </div>\n",
+    "                \"\"\"\n",
+    "                \n",
+    "                # Show demo message\n",
+    "                print(\"🎭 This is a demonstration version of AlphaEarth Land Cover Classifier\")\n",
+    "                print(\"🔒 Earth Engine authentication required for satellite data analysis\")\n",
+    "                print(\"💡 To use full features:\")\n",
+    "                print(\"   1. Use the Jupyter version\")  \n",
+    "                print(\"   2. Or run locally with Earth Engine authentication\")\n",
+    "                print(\"🌟 Thank you for trying AlphaEarth!\")\n",
+    "                return\n",
     "\n",
     "            # Show progress bar and update status\n",
     "            self.progress.layout.visibility = 'visible'\n",
@@ -769,8 +707,6 @@
     "                region = region_from_parts(roi_info[\"parts\"])\n",
     "                center_lat, center_lon = roi_info[\"center\"]\n",
     "\n",
-    "               \n",
-    "\n",
     "                self.progress.value = 30\n",
     "                self.progress.description = 'Loading satellite data...'\n",
     "\n",
@@ -783,7 +719,6 @@
     "                    n_per_class=self.n_samples.value,\n",
     "                    seed=self.seed.value\n",
     "                )\n",
-    "                \n",
     "\n",
     "                self.progress.value = 50\n",
     "                self.progress.description = 'Training model...'\n",
@@ -845,12 +780,9 @@
     "                emb_full, _, emb_mask_vis, esa_vis = load_stack(2020)\n",
     "\n",
     "                # Create individual embedding layers for the top 3 most important embeddings\n",
-    "                \n",
     "                embedding_layers = []\n",
     "\n",
     "                for i, (display_name, importance_pct, original_band) in enumerate(top3):\n",
-    "                    \n",
-    "\n",
     "                    # Select the specific embedding band\n",
     "                    embedding_band = emb_full.select(original_band).updateMask(emb_mask_vis).clip(region)\n",
     "\n",
@@ -890,17 +822,12 @@
     "                add_ee_layer(m, classB_img, {'palette': [color_b]}, f'Pixels: {self.class_b.value} ({self.ESA_CLASSES.get(self.class_b.value,\"?\")})')\n",
     "\n",
     "                # Add all top 3 embedding layers WITH SMALL POSITIONED COLOR BARS\n",
-    "                \n",
-    "                \n",
-    "                # Collect all color bar HTML\n",
     "                all_colorbars_html = \"\"\n",
     "                \n",
     "                for i, layer in enumerate(embedding_layers):\n",
     "                    try:\n",
     "                        palette = EMBEDDING_PALETTES[layer['palette_key']]\n",
     "                        layer_name = f\"🏆 {layer['name']} ({layer['importance']:.1f}%)\"\n",
-    "\n",
-    "                        \n",
     "\n",
     "                        # Add to map\n",
     "                        add_ee_layer(m, layer['image'], {\n",
@@ -917,8 +844,6 @@
     "                        )\n",
     "                        all_colorbars_html += colorbar_html\n",
     "\n",
-    "                        \n",
-    "\n",
     "                    except Exception as e:\n",
     "                        print(f\"  ❌ Failed to add layer {layer_name}: {str(e)}\")\n",
     "                        continue\n",
@@ -926,9 +851,6 @@
     "                # Add all color bars to the map\n",
     "                if all_colorbars_html:\n",
     "                    m.get_root().html.add_child(folium.Element(all_colorbars_html))\n",
-    "                    \n",
-    "\n",
-    "                \n",
     "\n",
     "                # Add sample points - USING WORKING CODE\n",
     "                sample_points = pair_fc.getInfo()\n",
@@ -973,8 +895,6 @@
     "                    points_layer_a.add_to(m)\n",
     "                    points_layer_b.add_to(m)\n",
     "\n",
-    "                    \n",
-    "\n",
     "                # Add ROI boundary\n",
     "                roi_coords = []\n",
     "                for part in roi_info[\"parts\"]:\n",
@@ -997,84 +917,6 @@
     "\n",
     "                # Add layer control\n",
     "                folium.LayerControl().add_to(m)\n",
-    "\n",
-    "                # Add \"Deselect All\" button functionality\n",
-    "                deselect_all_script = '''\n",
-    "                <script>\n",
-    "                // Wait for map to load, then add the \"Deselect All\" button\n",
-    "                setTimeout(function() {\n",
-    "                    // Find the layer control\n",
-    "                    var layerControl = document.querySelector('.leaflet-control-layers');\n",
-    "                    if (layerControl) {\n",
-    "                        // Create the deselect all button\n",
-    "                        var deselectButton = document.createElement('div');\n",
-    "                        deselectButton.innerHTML = `\n",
-    "                            <button onclick=\"deselectAllOverlays()\"\n",
-    "                                    style=\"width: 100%; margin: 5px 0; padding: 6px 8px;\n",
-    "                                           background: #ef4444; color: white; border: none;\n",
-    "                                           border-radius: 4px; cursor: pointer; font-size: 11px;\n",
-    "                                           font-weight: bold; text-align: center;\">\n",
-    "                                🚫 Deselect All Overlays\n",
-    "                            </button>\n",
-    "                        `;\n",
-    "\n",
-    "                        // Insert the button at the bottom of the overlays section\n",
-    "                        var overlaysSection = layerControl.querySelector('.leaflet-control-layers-overlays');\n",
-    "                        if (overlaysSection) {\n",
-    "                            overlaysSection.appendChild(deselectButton);\n",
-    "                            console.log('✅ Deselect All button added to layer control');\n",
-    "                        }\n",
-    "                    }\n",
-    "                }, 1000);\n",
-    "\n",
-    "                // Function to deselect all overlay layers\n",
-    "                function deselectAllOverlays() {\n",
-    "                    var overlayInputs = document.querySelectorAll('.leaflet-control-layers-overlays input[type=\"checkbox\"]');\n",
-    "                    var uncheckedCount = 0;\n",
-    "\n",
-    "                    overlayInputs.forEach(function(input) {\n",
-    "                        if (input.checked) {\n",
-    "                            input.click();\n",
-    "                            uncheckedCount++;\n",
-    "                        }\n",
-    "                    });\n",
-    "\n",
-    "                    if (uncheckedCount > 0) {\n",
-    "                        console.log(`🚫 Deselected ${uncheckedCount} overlay layers`);\n",
-    "                        showNotification(`🚫 ${uncheckedCount} layers deselected`);\n",
-    "                    } else {\n",
-    "                        showNotification('ℹ️ No layers were selected');\n",
-    "                    }\n",
-    "                }\n",
-    "\n",
-    "                // Simple notification function\n",
-    "                function showNotification(message) {\n",
-    "                    var notification = document.createElement('div');\n",
-    "                    notification.innerHTML = message;\n",
-    "                    notification.style.cssText = `\n",
-    "                        position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 10000;\n",
-    "                        background: #1f2937; color: white; padding: 10px 15px;\n",
-    "                        border-radius: 6px; font-size: 13px; font-weight: bold;\n",
-    "                        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);\n",
-    "                        transition: opacity 0.3s ease;\n",
-    "                    `;\n",
-    "                    document.body.appendChild(notification);\n",
-    "\n",
-    "                    // Auto-remove after 2 seconds\n",
-    "                    setTimeout(function() {\n",
-    "                        notification.style.opacity = '0';\n",
-    "                        setTimeout(function() {\n",
-    "                            if (notification.parentNode) {\n",
-    "                                notification.parentNode.removeChild(notification);\n",
-    "                            }\n",
-    "                        }, 300);\n",
-    "                    }, 2000);\n",
-    "                }\n",
-    "                </script>\n",
-    "                '''\n",
-    "\n",
-    "                # Add the script to the map\n",
-    "                m.get_root().html.add_child(folium.Element(deselect_all_script))\n",
     "\n",
     "                # Display results first\n",
     "                self.display_metrics(acc, auc, report, cm_matrix, len(y_train), len(y_test), importances, EMBED_BANDS, top5)\n",
@@ -1171,14 +1013,12 @@
     "        plt.ylabel(\"Importance (%)\")\n",
     "        plt.title(f\"Embedding importance: {self.class_a.value} vs {self.class_b.value} [{self.algorithm.value.upper()}] (Yellow = Top 3 with color bars)\")\n",
     "        plt.tight_layout()\n",
-    "        plt.show() \n",
-    "        \n",
-    "        "
+    "        plt.show() "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1200,7 +1040,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cd0b81fe14bb4c0ca25389b6fd901121",
+       "model_id": "b906abd3a15942b69fc9262d6e0f886f",
        "version_major": 2,
        "version_minor": 0
       },
