--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 67,
    "metadata": {
     "tags": []
    },
@@ -11,7 +11,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Earth Engine initialized with high-volume endpoint!\n",
+      "🔐 Authenticating with Google Earth Engine...\n",
+      "✅ Earth Engine already initialized!\n",
       "🛰️ Welcome to AlphaEarth Land Cover Classifier!\n",
       "🚀 Loading app...\n"
      ]
@@ -66,40 +67,33 @@
     "PROJECT_ID = \"animated-rhythm-449415-u3\"\n",
     "\n",
     "# ===============================================\n",
-    "# 🌍 EARTH ENGINE INITIALIZATION\n",
+    "# 🔐 SIMPLE EARTH ENGINE AUTHENTICATION (BACK TO WORKING VERSION)\n",
     "# ===============================================\n",
     "EE_INITIALIZED = False\n",
     "\n",
-    "def initialize_earth_engine():\n",
-    "    global EE_INITIALIZED\n",
-    "    \n",
+    "print(\"🔐 Authenticating with Google Earth Engine...\")\n",
+    "try:\n",
+    "    ee.Initialize()\n",
+    "    print(\"✅ Earth Engine already initialized!\")\n",
+    "    EE_INITIALIZED = True\n",
+    "except:\n",
     "    try:\n",
-    "        # Force high-volume endpoint initialization\n",
-    "        ee.Initialize(\n",
-    "            opt_url='https://earthengine-highvolume.googleapis.com',\n",
-    "            project=PROJECT_ID\n",
-    "        )\n",
-    "        print(\"✅ Earth Engine initialized with high-volume endpoint!\")\n",
+    "        print(\"🌐 Starting Earth Engine authentication...\")\n",
+    "        print(\"👆 Click the link below, sign in, and paste the code when prompted\")\n",
+    "        ee.Authenticate()\n",
+    "        ee.Initialize()\n",
+    "        print(\"✅ Earth Engine authenticated successfully!\")\n",
     "        EE_INITIALIZED = True\n",
-    "        return True\n",
-    "    except:\n",
-    "        try:\n",
-    "            # Fallback: try without project\n",
-    "            ee.Initialize(opt_url='https://earthengine-highvolume.googleapis.com')\n",
-    "            print(\"✅ Earth Engine initialized (no project)!\")\n",
-    "            EE_INITIALIZED = True\n",
-    "            return True\n",
-    "        except Exception as e:\n",
-    "            print(f\"❌ Earth Engine failed: {str(e)}\")\n",
-    "            print(\"🔧 This might work if you run it locally or in Colab\")\n",
-    "            EE_INITIALIZED = False\n",
-    "            return False\n",
-    "\n",
-    "# Initialize Earth Engine\n",
-    "initialize_earth_engine()\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Earth Engine authentication failed: {str(e)}\")\n",
+    "        print(\"⚠️ Some features will be limited\")\n",
+    "        EE_INITIALIZED = False\n",
     "\n",
     "print(\"🛰️ Welcome to AlphaEarth Land Cover Classifier!\")\n",
     "print(\"🚀 Loading app...\")\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "# ===============================================\n",
     "# ORIGINAL WORKING FUNCTIONS (from your working code)\n",
@@ -1086,42 +1080,6 @@
     "print(\"🎨 NEW: Small, clean color bars will appear in the bottom-right corner showing embedding values!\")\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "yu_LBxYW1dV0"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "_vvJElva1dQP"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "NvuCcJOH1dN0"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "uCPUfQZR1dHw"
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
