--- a/alpha_earth_app.ipynb
+++ b/alpha_earth_app.ipynb
@@ -2,6 +2,242 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div style='background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); \n",
+       "            color: white; padding: 30px; border-radius: 15px; margin-bottom: 30px;\n",
+       "            box-shadow: 0 8px 32px rgba(0,0,0,0.1);'>\n",
+       "    <h1 style='margin: 0; font-size: 36px; text-align: center; font-weight: bold;'>\n",
+       "        🛰️ AlphaEarth Land Cover Classifier\n",
+       "    </h1>\n",
+       "    <p style='margin: 15px 0 0 0; font-size: 18px; text-align: center; opacity: 0.9;'>\n",
+       "        <strong>Welcome to the Google AlphaEarth Land Cover Classifier App!</strong><br>\n",
+       "        Here, you can explore and interact with the 64 embeddings from Google AlphaEarth \n",
+       "        while classifying land cover types using validated labels from the Ecological Society of America.\n",
+       "    </p>\n",
+       "</div>\n",
+       "\n",
+       "<div style='background: #f8f9ff; padding: 25px; border-radius: 12px; margin-bottom: 25px;\n",
+       "            border-left: 5px solid #4f46e5; box-shadow: 0 4px 16px rgba(0,0,0,0.05);'>\n",
+       "    <h2 style='color: #1e293b; margin: 0 0 20px 0; font-size: 24px;'>\n",
+       "        🚀 Quick Start Guide\n",
+       "    </h2>\n",
+       "    \n",
+       "    <div style='display: grid; gap: 15px; margin-bottom: 20px;'>\n",
+       "        <div style='background: white; padding: 15px; border-radius: 8px; border-left: 4px solid #10b981;'>\n",
+       "            <h3 style='color: #047857; margin: 0 0 8px 0; font-size: 16px;'>\n",
+       "                📋 Step 1: Run All Cells\n",
+       "            </h3>\n",
+       "            <p style='color: #374151; margin: 0; font-size: 14px;'>\n",
+       "                Click <strong>Cell → Run All</strong> or press <kbd>Ctrl+Shift+Enter</kbd> multiple times to execute all code cells.\n",
+       "            </p>\n",
+       "        </div>\n",
+       "        \n",
+       "        <div style='background: white; padding: 15px; border-radius: 8px; border-left: 4px solid #f59e0b;'>\n",
+       "            <h3 style='color: #92400e; margin: 0 0 8px 0; font-size: 16px;'>\n",
+       "                🔐 Step 2: Authenticate Earth Engine\n",
+       "            </h3>\n",
+       "            <p style='color: #374151; margin: 0; font-size: 14px;'>\n",
+       "                When prompted, click the authentication link, sign in with your Google account, copy the verification code, and paste it back here.\n",
+       "                <br><em>Don't have Earth Engine access? Visit <a href=\"https://earthengine.google.com\" target=\"_blank\">earthengine.google.com</a> to sign up (free).</em>\n",
+       "            </p>\n",
+       "        </div>\n",
+       "        \n",
+       "        <div style='background: white; padding: 15px; border-radius: 8px; border-left: 4px solid #3b82f6;'>\n",
+       "            <h3 style='color: #1e40af; margin: 0 0 8px 0; font-size: 16px;'>\n",
+       "                🗺️ Step 3: Select Your Region\n",
+       "            </h3>\n",
+       "            <p style='color: #374151; margin: 0; font-size: 14px;'>\n",
+       "                Use the rectangle tool (📦) in the interactive map to draw your region of interest. The analysis will focus on this area.\n",
+       "            </p>\n",
+       "        </div>\n",
+       "        \n",
+       "        <div style='background: white; padding: 15px; border-radius: 8px; border-left: 4px solid #ef4444;'>\n",
+       "            <h3 style='color: #dc2626; margin: 0 0 8px 0; font-size: 16px;'>\n",
+       "                🎯 Step 4: Configure & Run Analysis\n",
+       "            </h3>\n",
+       "            <p style='color: #374151; margin: 0; font-size: 14px;'>\n",
+       "                Choose your land cover classes, algorithm settings, and click <strong>\"🚀 RUN ANALYSIS\"</strong> to start the classification.\n",
+       "            </p>\n",
+       "        </div>\n",
+       "    </div>\n",
+       "</div>\n",
+       "\n",
+       "<div style='background: #ecfccb; padding: 20px; border-radius: 10px; margin-bottom: 25px;\n",
+       "            border-left: 4px solid #65a30d;'>\n",
+       "    <h3 style='color: #365314; margin: 0 0 10px 0; font-size: 18px;'>\n",
+       "        ✨ What This App Does\n",
+       "    </h3>\n",
+       "    <ul style='color: #374151; margin: 0; font-size: 14px; line-height: 1.6;'>\n",
+       "        <li><strong>64-Dimensional Embeddings:</strong> Explore Google AlphaEarth's advanced satellite embeddings for comprehensive land analysis</li>\n",
+       "        <li><strong>ESA Validated Labels:</strong> Uses high-quality land cover labels validated by the Ecological Society of America</li>\n",
+       "        <li><strong>Machine Learning:</strong> Choose from Random Forest, XGBoost, LightGBM, or Gradient Boosting algorithms</li>\n",
+       "        <li><strong>Interactive Maps:</strong> Visualize results with color-coded layers and embedding importance rankings</li>\n",
+       "        <li><strong>Real-time Results:</strong> Get accuracy metrics, confusion matrices, and feature importance plots</li>\n",
+       "        <li><strong>11 Land Cover Classes:</strong> Tree cover, Cropland, Built-up areas, Water bodies, and more</li>\n",
+       "    </ul>\n",
+       "</div>\n",
+       "\n",
+       "<div style='background: #fef3c7; padding: 18px; border-radius: 10px; margin-bottom: 25px;\n",
+       "            border-left: 4px solid #f59e0b;'>\n",
+       "    <h3 style='color: #92400e; margin: 0 0 10px 0; font-size: 16px;'>\n",
+       "        ⚠️ Important Notes\n",
+       "    </h3>\n",
+       "    <ul style='color: #374151; margin: 0; font-size: 14px; line-height: 1.5;'>\n",
+       "        <li><strong>First-time setup:</strong> Initial environment building takes ~2 minutes</li>\n",
+       "        <li><strong>Region size:</strong> Choose regions wisely - very large areas may take longer to process</li>\n",
+       "        <li><strong>Session timeout:</strong> Binder sessions expire after ~10 minutes of inactivity</li>\n",
+       "        <li><strong>Best results:</strong> Try comparing contrasting land cover types (e.g., Water vs Built-up)</li>\n",
+       "    </ul>\n",
+       "</div>\n",
+       "\n",
+       "<div style='text-align: center; background: #f1f5f9; padding: 20px; border-radius: 10px; margin-bottom: 25px;'>\n",
+       "    <p style='color: #475569; margin: 0; font-size: 16px; font-weight: 500;'>\n",
+       "        🎓 Ready to explore the 64-dimensional embedding space? Run the cells below! \n",
+       "    </p>\n",
+       "    <div style='border-top: 1px solid #cbd5e1; margin: 15px 0; padding-top: 15px;'>\n",
+       "        <p style='color: #64748b; margin: 0; font-size: 14px; line-height: 1.5;'>\n",
+       "            Created with ❤️ using Google Earth Engine, AlphaEarth Embeddings, and Machine Learning<br>\n",
+       "            <strong>Created by:</strong> Felipe Benavides, SDS Lab - Northeastern University and the Gulf of Maine Research Institute<br>\n",
+       "            📧 <a href=\"mailto:fbenavides@gmri.org\" style=\"color: #0ea5e9; text-decoration: none;\">fbenavides@gmri.org</a>\n",
+       "        </p>\n",
+       "    </div>\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🚀 Welcome! Please run all cells to start the AlphaEarth Land Cover Classifier...\n",
+      "📍 Scroll down to see the interactive app interface after running all cells.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML, display\n",
+    "\n",
+    "display(HTML(\"\"\"\n",
+    "<div style='background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); \n",
+    "            color: white; padding: 30px; border-radius: 15px; margin-bottom: 30px;\n",
+    "            box-shadow: 0 8px 32px rgba(0,0,0,0.1);'>\n",
+    "    <h1 style='margin: 0; font-size: 36px; text-align: center; font-weight: bold;'>\n",
+    "        🛰️ AlphaEarth Land Cover Classifier\n",
+    "    </h1>\n",
+    "    <p style='margin: 15px 0 0 0; font-size: 18px; text-align: center; opacity: 0.9;'>\n",
+    "        <strong>Welcome to the Google AlphaEarth Land Cover Classifier App!</strong><br>\n",
+    "        Here, you can explore and interact with the 64 embeddings from Google AlphaEarth \n",
+    "        while classifying land cover types using validated labels from the Ecological Society of America.\n",
+    "    </p>\n",
+    "</div>\n",
+    "\n",
+    "<div style='background: #f8f9ff; padding: 25px; border-radius: 12px; margin-bottom: 25px;\n",
+    "            border-left: 5px solid #4f46e5; box-shadow: 0 4px 16px rgba(0,0,0,0.05);'>\n",
+    "    <h2 style='color: #1e293b; margin: 0 0 20px 0; font-size: 24px;'>\n",
+    "        🚀 Quick Start Guide\n",
+    "    </h2>\n",
+    "    \n",
+    "    <div style='display: grid; gap: 15px; margin-bottom: 20px;'>\n",
+    "        <div style='background: white; padding: 15px; border-radius: 8px; border-left: 4px solid #10b981;'>\n",
+    "            <h3 style='color: #047857; margin: 0 0 8px 0; font-size: 16px;'>\n",
+    "                📋 Step 1: Run All Cells\n",
+    "            </h3>\n",
+    "            <p style='color: #374151; margin: 0; font-size: 14px;'>\n",
+    "                Click <strong>Cell → Run All</strong> or press <kbd>Ctrl+Shift+Enter</kbd> multiple times to execute all code cells.\n",
+    "            </p>\n",
+    "        </div>\n",
+    "        \n",
+    "        <div style='background: white; padding: 15px; border-radius: 8px; border-left: 4px solid #f59e0b;'>\n",
+    "            <h3 style='color: #92400e; margin: 0 0 8px 0; font-size: 16px;'>\n",
+    "                🔐 Step 2: Authenticate Earth Engine\n",
+    "            </h3>\n",
+    "            <p style='color: #374151; margin: 0; font-size: 14px;'>\n",
+    "                When prompted, click the authentication link, sign in with your Google account, copy the verification code, and paste it back here.\n",
+    "                <br><em>Don't have Earth Engine access? Visit <a href=\"https://earthengine.google.com\" target=\"_blank\">earthengine.google.com</a> to sign up (free).</em>\n",
+    "            </p>\n",
+    "        </div>\n",
+    "        \n",
+    "        <div style='background: white; padding: 15px; border-radius: 8px; border-left: 4px solid #3b82f6;'>\n",
+    "            <h3 style='color: #1e40af; margin: 0 0 8px 0; font-size: 16px;'>\n",
+    "                🗺️ Step 3: Select Your Region\n",
+    "            </h3>\n",
+    "            <p style='color: #374151; margin: 0; font-size: 14px;'>\n",
+    "                Use the rectangle tool (📦) in the interactive map to draw your region of interest. The analysis will focus on this area.\n",
+    "            </p>\n",
+    "        </div>\n",
+    "        \n",
+    "        <div style='background: white; padding: 15px; border-radius: 8px; border-left: 4px solid #ef4444;'>\n",
+    "            <h3 style='color: #dc2626; margin: 0 0 8px 0; font-size: 16px;'>\n",
+    "                🎯 Step 4: Configure & Run Analysis\n",
+    "            </h3>\n",
+    "            <p style='color: #374151; margin: 0; font-size: 14px;'>\n",
+    "                Choose your land cover classes, algorithm settings, and click <strong>\"🚀 RUN ANALYSIS\"</strong> to start the classification.\n",
+    "            </p>\n",
+    "        </div>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\n",
+    "<div style='background: #ecfccb; padding: 20px; border-radius: 10px; margin-bottom: 25px;\n",
+    "            border-left: 4px solid #65a30d;'>\n",
+    "    <h3 style='color: #365314; margin: 0 0 10px 0; font-size: 18px;'>\n",
+    "        ✨ What This App Does\n",
+    "    </h3>\n",
+    "    <ul style='color: #374151; margin: 0; font-size: 14px; line-height: 1.6;'>\n",
+    "        <li><strong>64-Dimensional Embeddings:</strong> Explore Google AlphaEarth's advanced satellite embeddings for comprehensive land analysis</li>\n",
+    "        <li><strong>ESA Validated Labels:</strong> Uses high-quality land cover labels validated by the Ecological Society of America</li>\n",
+    "        <li><strong>Machine Learning:</strong> Choose from Random Forest, XGBoost, LightGBM, or Gradient Boosting algorithms</li>\n",
+    "        <li><strong>Interactive Maps:</strong> Visualize results with color-coded layers and embedding importance rankings</li>\n",
+    "        <li><strong>Real-time Results:</strong> Get accuracy metrics, confusion matrices, and feature importance plots</li>\n",
+    "        <li><strong>11 Land Cover Classes:</strong> Tree cover, Cropland, Built-up areas, Water bodies, and more</li>\n",
+    "    </ul>\n",
+    "</div>\n",
+    "\n",
+    "<div style='background: #fef3c7; padding: 18px; border-radius: 10px; margin-bottom: 25px;\n",
+    "            border-left: 4px solid #f59e0b;'>\n",
+    "    <h3 style='color: #92400e; margin: 0 0 10px 0; font-size: 16px;'>\n",
+    "        ⚠️ Important Notes\n",
+    "    </h3>\n",
+    "    <ul style='color: #374151; margin: 0; font-size: 14px; line-height: 1.5;'>\n",
+    "        <li><strong>First-time setup:</strong> Initial environment building takes ~2 minutes</li>\n",
+    "        <li><strong>Region size:</strong> Choose regions wisely - very large areas may take longer to process</li>\n",
+    "        <li><strong>Session timeout:</strong> Binder sessions expire after ~10 minutes of inactivity</li>\n",
+    "        <li><strong>Best results:</strong> Try comparing contrasting land cover types (e.g., Water vs Built-up)</li>\n",
+    "    </ul>\n",
+    "</div>\n",
+    "\n",
+    "<div style='text-align: center; background: #f1f5f9; padding: 20px; border-radius: 10px; margin-bottom: 25px;'>\n",
+    "    <p style='color: #475569; margin: 0; font-size: 16px; font-weight: 500;'>\n",
+    "        🎓 Ready to explore the 64-dimensional embedding space? Run the cells below! \n",
+    "    </p>\n",
+    "    <div style='border-top: 1px solid #cbd5e1; margin: 15px 0; padding-top: 15px;'>\n",
+    "        <p style='color: #64748b; margin: 0; font-size: 14px; line-height: 1.5;'>\n",
+    "            Created with ❤️ using Google Earth Engine, AlphaEarth Embeddings, and Machine Learning<br>\n",
+    "            <strong>Created by:</strong> Felipe Benavides, SDS Lab - Northeastern University and the Gulf of Maine Research Institute<br>\n",
+    "            📧 <a href=\"mailto:fbenavides@gmri.org\" style=\"color: #0ea5e9; text-decoration: none;\">fbenavides@gmri.org</a>\n",
+    "        </p>\n",
+    "    </div>\n",
+    "</div>\n",
+    "\"\"\"))\n",
+    "\n",
+    "print(\"🚀 Welcome! Please run all cells to start the AlphaEarth Land Cover Classifier...\")\n",
+    "print(\"📍 Scroll down to see the interactive app interface after running all cells.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 67,
    "metadata": {
     "tags": []
